k8s/keycloak-ns/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bravo-keycloak-ns
  labels:
    name: bravo-keycloak-ns
